.k8s/keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
  namespace: shared
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:23.0.7
          args: [ "start-dev" ]
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  labels:
    app: keycloak
  namespace: shared
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
  selector:
    app: keycloak
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    cert-manager.io/cluster-issuer: "lets-encrypt"
  namespace: shared
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "accounts.k8splay.xyz"
      secretName: tls-secret
  rules:
    - host: "accounts.k8splay.xyz"
      http:
        paths:
          - pathType: Prefix
            path: "/(.*)"
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
